--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-04 17:14+0000\n"
-"PO-Revision-Date: 2017-12-05 15:24+0100\n"
+"POT-Creation-Date: 2017-12-05 15:54+0100\n"
+"PO-Revision-Date: 2017-12-06 10:14+0100\n"
 "Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -80,7 +80,8 @@ msgstr "Gem fejlede."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:656
 msgid "Do you really want to leave the editor without saving your changes?"
-msgstr "Er du sikker på at du vil forlade editoren uden at gemme dine ændringer?"
+msgstr ""
+"Er du sikker på at du vil forlade editoren uden at gemme dine ændringer?"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:670
 msgid "Error while uploading your PDF file, please try again."
@@ -93,7 +94,9 @@ msgid ""
 "Your request has been queued on the server and will now be processed. If "
 "this takes longer than two minutes, please contact us or go back in your "
 "browser and try again."
-msgstr "Din forespørgsel er under behandling. Hvis der går mere end to minutter, så kontakt os eller gå tilbage og prøv igen."
+msgstr ""
+"Din forespørgsel er under behandling. Hvis der går mere end to minutter, så "
+"kontakt os eller gå tilbage og prøv igen."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:41
 #: pretix/static/pretixbase/js/asynctask.js:62
@@ -113,20 +116,26 @@ msgid ""
 "We are currently sending your request to the server. If this takes longer "
 "than one minute, please check your internet connection and then reload this "
 "page and try again."
-msgstr "Din forespørgsel bliver sendt til serveren. Hvis det tager mere end et minut, så tjek din internetforbindelse og prøv igen."
+msgstr ""
+"Din forespørgsel bliver sendt til serveren. Hvis det tager mere end et "
+"minut, så tjek din internetforbindelse og prøv igen."
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
 msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
-msgstr "Din forespørgsel er under behandling. Alt efter størrelse kan der gå op til et par minutter."
+msgstr ""
+"Din forespørgsel er under behandling. Alt efter størrelse kan der gå op til "
+"et par minutter."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
 "We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
-msgstr "Vi kan ikke komme i kontakt med serveren, men prøver igen. Seneste fejlkode: {code}"
+msgstr ""
+"Vi kan ikke komme i kontakt med serveren, men prøver igen. Seneste fejlkode: "
+"{code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
@@ -137,7 +146,9 @@ msgstr "Denne forespørgsel tog for lang tid. Prøv venligst igen."
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
-msgstr "Vi kan ikke komme i kontakt med serveren. Prøv venligst igen. Fejlkode: {code}"
+msgstr ""
+"Vi kan ikke komme i kontakt med serveren. Prøv venligst igen. Fejlkode: "
+"{code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:174
 #: pretix/static/pretixcontrol/js/ui/main.js:28
@@ -272,15 +283,17 @@ msgid ""
 "You currently have an active cart for this event. If you select more "
 "products, they will be added to your existing cart. Click on this message to "
 "continue checkout with your cart."
-msgstr "Du har allerede en aktiv kurv for dette arrangement. Hvis du vælge flere varer vil de blive tilføjet din eksisterende kurv. Klik på denne besked for at gå mod kassen med din kurv."
+msgstr ""
+"Du har allerede en aktiv kurv for dette arrangement. Hvis du vælge flere "
+"varer vil de blive tilføjet din eksisterende kurv. Klik på denne besked for "
+"at gå mod kassen med din kurv."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
-#, fuzzy
 msgctxt "widget"
 msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
-msgstr "billetsystem leveret af <a href=\"https://pretix.eu\" target=\"_blank\">pretix</a>"
+msgstr "billetsystem drevet af <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
