--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -8043,7 +8043,7 @@ msgstr "Gültig"
 
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:22
 msgid "Redeemed and checked in with ticket"
-msgstr "Eingelösung und Ticket eingecheckt"
+msgstr "Eingelöst und Ticket eingecheckt"
 
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:36
 msgid "Download list"
