--- a/src/tests/locale/ignore_de.txt
+++ b/src/tests/locale/ignore_de.txt
@@ -1,1 +1,140 @@
+Admin
+Adminbereich
+Alipay
+and
+App
+Apps
+ausgeklappt
+auswahl
+Authenticator
+Bancontact
+Banking
+Beispielevent
+Benachrichtigungs
+Benachrichtigungsart
+Benachrichtigungseinstellungen
+Berechtigungs
+Bestellbestätigungs
+Bestellungsstatus
+Bestätigungs
+bez
+Blackberry
+chardet
+charge
+Checkout
+Chrome
+Cronjob
+CSV
+Debug
+Doe
+Drag
+Droid
+Drop
+Edge
+Einlassdatum
+Einlassuhrzeit
+Erweiterungs
+etc
+Event
+Eventeingang
+Eventfirma
+evtl
+Explorer
+Footer
+geht's
+GENEXAMPLE
+gescannt
+giropay
+Gutscheineinlöser
+herunterscrollen
+hochlädst
+HTTPS
+iCal
+ID
+iDEAL
+Inc
+inkl
+Installations
+invalidiert
+iOS
+iTunes
+JavaScript
+Kategoriebeschreibung
+Konfigurations
+loszulegen
+Ltd
+Meta
+Metadaten
+MwSt
+Nr
+Opera
+Output
+PayPal
+PayPals
+Play
+Plugin
+Plugins
+prefix
+pretix
+pretixdroid
+Professional
+pt
+QR
+Rechnungs
+Referer
+Registrierungsdatum
+Request
+Requests
+Reservierungszeitraum
 reverse
+Rundungsdifferenzen
+Scan
+Scanergebnis
+Secret
+SEPA
+Shirts
+SOFORT
+SSL
+STARTTLS
+Steuerschuldnerschaft
+Store
+Stornobeleg
+Strg
+Stripe
+Stripes
+Tab
+Teammitglied
+Teamname
+Tokengenerator
+Toolbar
+TOTP
+unkategorisiert
+untenstehende
+untenstehenden
+unzugeordnete
+unzugeordneten
+Ursprüngl
+USt
+Veranstaltereinstellungen
+Veranstalterkonten
+Veranstaltername
+Veranstalterseite
+Veranstaltungs
+Verfügbarkeitsberechnung
+Veröffentlichbarer
+VIP
+Webhook
+Widget
+Yubikey
+Zahlungs
+Zahlungsbestätigungs
+zahlungspflichtig
+Zahlungsplugins
+zeitbasiert
+zubuchbaren
+zurückbuchen
+zurückgeleitet
+zzgl
+überbuchen
+überbucht
+überbuchten
